# telegram-sanitize

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-lint-test.yaml
examples/: full_message_estimate.rs  html_alert.rs  markdown_v2_error_block.rs  markdown_v2_labels.rs  plain_alert.rs
src/: lib.rs
